# autotool-torial

./: .gitignore  Makefile.am  Makefile.in  README.md  configure  configure.ac  steps.md
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  main.c
