# same syntax as Makefile
# copied into Makefile.in

# *_PROGRAMS list programs to build
# there are also _SCRIPTS, DATA, LIBRARIES, &c. primaries
# the bin means install in bindir (can omit dir)
bin_PROGRAMS = hello
# for each program listed above, find a $prog_SOURCES variable
# it lists the source files
# also has the side effect of including sources in dist tarballs
hello_SOURCES = main.c
